--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.address=0.0.0.0
 
 server.servlet.session.timeout=99999999
 
-# spring.datasource.url=jdbc:postgresql://localhost:5432/newDataVariablesDGES
-spring.datasource.url=jdbc:postgresql://localhost:5432/seleccion
+spring.datasource.url=jdbc:postgresql://10.109.1.13:5432/seleccion
+# spring.datasource.url=jdbc:postgresql://localhost:5432/seleccion
 spring.datasource.username=postgres
 spring.datasource.password=nuevo_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
